envoy-gateway/resource/shared-gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: shared-gateway
  namespace: envoy-gateway-system
spec:
  gatewayClassName: nodeport-envoy-gateway-class
  listeners:
    - name: tls-listener
      protocol: TLS
      port: 8443
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All
    - name: http-listener
      protocol: HTTP
      port: 8000
      allowedRoutes:
        namespaces:
          from: All
